fix:spacing in mds for none interactive elements

--- a/Frontend/src/app/common/ui/mds-editor/widgets/mds-editor-widget-childobjects/mds-editor-widget-childobjects.component.scss
+++ b/Frontend/src/app/common/ui/mds-editor/widgets/mds-editor-widget-childobjects/mds-editor-widget-childobjects.component.scss
@@ -4,6 +4,7 @@
   background-color: $cardLightBackground;
   padding:20px $cardPadding;
   margin-left: $cardPadding*-1;
+  margin-bottom: 1.5em;
   width: calc(100% + #{$cardPadding*2});
   .group {
     display: flex;
